--- a/changePassword.html
+++ b/changePassword.html
@@ -10,13 +10,13 @@
     <main>
       <section>
         <h2>Change Password</h2>
-        <form id="change-password-form">
+        <form id="change-password-form" method="post" action="back/changePassword.php">
           <label for="current-password">Current Password</label>
-          <input type="password" id="current-password" placeholder="Current Password" required minlength="4" maxlength="12"/>
+          <input type="password" id="current-password" name="current-password" placeholder="Current Password" required minlength="4" maxlength="12"/>
           <label for="new-password">New Password</label>
-          <input type="password" id="new-password" placeholder="New Password" required minlength="4" maxlength="12"/>
+          <input type="password" id="new-password" name="new-password" placeholder="New Password" required minlength="4" maxlength="12"/>
           <label for="confirm-password">Confirm Password</label>
-          <input type="password" id="confirm-password" placeholder="Confirm Password" required minlength="4" maxlength="12"/>
+          <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm Password" required minlength="4" maxlength="12"/>
           <div class="bottom">
             <a href="" class="go-back">Go back</a>
             <a href="resetPassword.html" class="forgot-password">Forgot Password?</a>
@@ -31,6 +31,6 @@
         </div>
       </section>
     </main>
-    <script src="./script/changePassword.js"></script>
+    <!-- <script src="./script/changePassword.js"></script> -->
   </body>
 </html>
