--- a/About.html
+++ b/About.html
@@ -10,7 +10,7 @@
     <header>
         <h1>EduSync</h1>
         <nav>
-          <a href="index.html">Home</a>
+          <a href="index.php">Home</a>
           <a href="/About.html" target="_blank">About</a>
           <label for="uni">Universities</label>
           <input type="checkbox" id="uni"/>
