--- a/About.html
+++ b/About.html
@@ -11,11 +11,11 @@
         <h1>EduSync</h1>
         <nav>
           <a href="index.php">Home</a>
-          <a href="/About.html" target="_blank">About</a>
+          <a href="About.html">About</a>
           <label for="uni">Universities</label>
           <input type="checkbox" id="uni"/>
           <a href="#address">Contact</a>
-          <a href="/login.html" target="_blank">Login</a>
+          <a href="login.html">Login</a>
           <div class="universities-dropdown">
             <a href="http://www.aastu.edu.et/" target="_blank">AASTU</a>
             <a href="https://www.aau.edu.et/" target="_blank">AAU</a>
@@ -61,9 +61,9 @@
         <div class="useful-links">
           <h2>Useful Links</h2>
           <div class="links">
-            <a href="#">Home</a>
+            <a href="index.php">Home</a>
             <a href="#">About</a>
-            <a href="/login.html">Login</a>
+            <a href="login.html">Login</a>
           </div>
         </div>
       </footer>
