moved admin.php to back

--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
             maxlength="12"
           />
           <div class="bottom">
-            <a href="/index.html" class="go-back">Go back</a>
+            <a href="http://localhost/student-record-management-system/index.php" class="go-back">Go back</a>
             <a href="resetPassword.html" class="forgot-password"
               >Forgot Password?</a
             >
